--- a/public/backend/js/tsconfig.json
+++ b/public/backend/js/tsconfig.json
@@ -1,15 +1,18 @@
 {
-    "compileOnSave":true,
-    "compilerOptions": {
-        "target": "es5",
-        "module": "amd",
-        "moduleResolution": "classic",
-        "sourceMap": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "removeComments": false,
-        "noImplicitAny": false,
-        "preserveConstEnums": true,
-        "jsx":"react"
-    }
+  "compileOnSave": true,
+  "compilerOptions": {
+    "target": "es2015",
+    "module": "amd",
+    "moduleResolution": "classic",
+    "sourceMap": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "removeComments": false,
+    "noImplicitAny": false,
+    "preserveConstEnums": true,
+    "jsx": "react"
+  },
+  "include": [
+    './queries.ts'
+  ]
 }
